<resources>
    <!--  main  -->
    <string name="app_name">MyBMI</string>
    <string name="title">BMI測定</string>
    <string name="text_white">体重kg</string>
    <string name="text_height">身長㎝</string>
    <string name="text_bmi">BMI結果</string>
    <string name="button_measurement">測定</string>
    <string name="button_reset">リセット</string>
    <string name="button_detail">詳細</string>

    <!--  detail  -->
    <string name="detail_title">BMI詳細</string>
    <string name="my_bmi">あなたのBMI</string>
    <string name="back_button">戻る</string>
    <string name="click_button">CLICK</string>
    <string name="skinny_text">痩せ</string>
    <string name="standard_text">標準</string>
    <string name="obesity_text">肥満</string>

    <!--  フラグメント  -->
    <string name="standard">あなたは標準的な体重です。\n現状の体重を維持し健康的な体型を\nキープしていてください。</string>
    <string name="obesity">あなたは太り気味な体重です。\n現状より体重を落とし健康的な体型を\n目指して下さい。</string>
    <string name="skinny">あなたは痩せ気味な体重です。\n現状の体重を増やし健康的な体型を\n目指してください。</string>
</resources>



