<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

<!--  タイトル  -->
    <TextView
        android:id="@+id/title_measurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="50sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp" />

<!--  身長  -->
    <LinearLayout
        android:id="@+id/height_box"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/title_measurement"
        app:layout_constraintBottom_toTopOf="@id/button_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/height_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/text_height"
            android:layout_marginEnd="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/height_input_form"
            android:text=""
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:hint="㎝"
            android:inputType="number" />

    </LinearLayout>

<!--  体重  -->
    <LinearLayout
        android:id="@+id/weight_box"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/height_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weight_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/text_white"
            android:layout_marginEnd="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/weight_input_form"
            android:text=""
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:inputType="number"
            android:hint="kg"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <!--　　ボタン　　-->
    <LinearLayout
        android:id="@+id/button_box"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        android:orientation="horizontal">

        <Button
            android:id="@+id/measurement_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_sample"
            android:text="@string/button_measurement"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_sample"
            android:text="@string/button_reset"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>